2016-08-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* webp: Updated bundled libwebp to release 0.5.1.

	* libxml: Updated bundled libxml2 to release 2.9.4.

	* lcms: Updated bundled lcms2 to release 2.8.

	* png: Update bundled libpng to release 1.6.24.

	* coders/jpeg.c (ReadJPEGImage): Log setting resolution and
	resolution units due to JFIF marker.

	* coders/sgi.c (SGIDecode): Fix integer overflow of size type in
	Win64 build where sizeof(long) < sizeof(size_t).

2016-08-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders, magick: Compile clean using GCC with -std=c90.

	* magick/describe.c (DescribeImage): The 'identify' and 'info'
	functionality only shows the pixel read rate if image was not read
	in 'ping' mode.  Provide seconds timing with 6 digits of precision
	since that is what is needed.

2016-08-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/describe.c (DescribeImage): Include milliseconds
	resolution in elapsed time output.

	* magick/timer.c (ElapsedTime): Use clock_gettime() (when
	available with default linkage) to obtain elapsed time.

2016-08-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/yuv.c (WriteYUVImage): Fix benign clang compiler warning
	regarding "variable 'x' is incremented both in the loop header and
	in the loop body".

	* configure.ac: Fixes to use clang's OpenMP runtime library
	(-lomp) for clang 3.8 and later.  Specifically tested with clang
	3.8 on Ubuntu 16.04 'xenial'.  Problem was reported by Holger
	Hoffstätte via private email.

	* NEWS.txt: Bring up to date with latest changes.

2016-07-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawImage): Reject abnormally absurd gradient
	size requests (many absurd requests are still allowed).  Provide
	detailed error reports when a gradient is rejected.

	* coders/svg.c: Support units for 'stroke-dashoffset'.

2016-07-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
