@@ -35,6 +35,15 @@
 <div class="document">
 
 
+<p>2016-08-15  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>lcms/src/cmstypes.c (Type_MLU_Read): &quot;Added an extra check to
+MLU bounds&quot;, change based on github mm2/Little-CMS commit
+5ca71a7bc18b6897ab21d815d15e218e204581e2 and announced to the
+oss-security list by Ibrahim M. El-Sayed on Mon, 15 Aug 2016.</li>
+</ul>
+</blockquote>
 <p>2016-08-14  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
